# AgentForge

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTFORGE_MASTER_PROMPT.md  CLAUDE.md  CONTRIBUTING.md  Makefile  README.md  docker-compose.yml  page.md  requirements-dev.txt
backend/: Dockerfile  README.md  alembic.ini  pyproject.toml
backend/app/: __init__.py  config.py  dependencies.py  main.py
backend/app/api/: sse.py
backend/app/api/middleware/: correlation.py  error_handler.py
backend/app/api/schemas/: agent_schemas.py  auth_schemas.py  campaign_schemas.py  finetune_schemas.py  sandbox_schemas.py  skill_schemas.py
backend/app/api/v1/: agents.py  auth.py  campaigns.py  finetune.py  generation.py  router.py  sandbox.py  skills.py
backend/app/application/services/: agent_service.py  auth_service.py  campaign_service.py  finetune_service.py  generation_service.py  sandbox_service.py  skill_service.py
backend/app/domain/: exceptions.py  graph_definition.py  orchestration_result.py  value_objects.py
backend/app/domain/entities/: agent.py  campaign.py  execution.py  finetune_job.py  skill.py  user.py
backend/app/domain/ports/: agent_orchestrator.py  agent_repository.py  campaign_repository.py  execution_events.py  finetune_repository.py  (+4 more)
backend/app/infrastructure/: redis_client.py
backend/migrations/: env.py
backend/migrations/versions/: 001_initial_schema.py  002_campaigns.py  003_skills_finetune.py
backend/tests/: conftest.py  test_auth_agents.py  test_campaigns.py  test_health.py  test_hitl_and_graph.py  test_streams.py
(+53 files in other folders)
